fixed input box on mobile

--- a/assets/stylemob.css
+++ b/assets/stylemob.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; box-sizing: border-box;}
 body, html {font-size: 10px; font-family: Gloria Hallelujah, cursive; height: 100%; overflow: hidden; border: solid 1px black;}
-form {background: #000; padding: 3px; border-radius: 10px; position: relative; left: 0%; top: 2px; width: 100%; display: inline-block; height:18%;}
+form {background: #000; padding: 3px; border-radius: 10px; position: fixed; left: 0%; bottom: 0%; width: 100%; display: inline-block; height:20%;}
 form input {border: 0; padding: 2px; width: 80%; margin-right: .5%; font-size: 16px; display: inline-block; height:96%;}
 form button {color: white; font-weight: bold; width: 18%; background: darkblue; border: solid 2px darkblue; border-radius: 5px; padding: 0px; display: inline-block; height:96%;}
 
